# serverless-endpoints

./: .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: ci.yml
serverless_endpoints/: __init__.py  authorizer.py  exception.py  logger.py
serverless_endpoints/endpoints/: all.py  temperature.py  temperature_logger.py
