[tool.poetry]
name = "serverless-endpoints"
version = "0.1.0"
description = "Serverless endpoints for electronics"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.7.1"
mypy-boto3-dynamodb = "^1.26.24"
boto3 = "^1.26.64"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
mypy = "^0.991"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
